--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.34",
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.13.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^3.0.7",
+    "resend": "^4.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
