--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.13.0",
     "next": "14.1.3",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^3.0.7",
