--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.5",
     "@react-email/components": "^0.0.34",
+    "ai": "^4.2.9",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
     "mongoose": "^8.13.0",
     "next": "14.1.3",
     "next-auth": "^4.24.11",
+    "openai": "^4.90.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^3.0.7",
