--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.5",
+    "@hookform/resolvers": "^5.0.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.34",
     "ai": "^4.2.9",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "lucide-react": "^0.486.0",
     "mongoose": "^8.13.0",
     "next": "14.1.3",
     "next-auth": "^4.24.11",
@@ -21,7 +29,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^3.0.7",
+    "react-hook-form": "^7.55.0",
     "resend": "^4.2.0",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
