--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.34",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "ai": "^4.2.9",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
@@ -28,6 +31,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.486.0",
     "mongoose": "^8.13.0",
+    "motion": "^12.6.5",
     "next": "14.1.3",
     "next-auth": "^4.24.11",
     "openai": "^4.90.0",
@@ -36,7 +40,7 @@
     "react-email": "^3.0.7",
     "react-hook-form": "^7.55.0",
     "resend": "^4.2.0",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.24.2"
