--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.34",
+    "@react-email/render": "^1.1.1",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
@@ -34,6 +35,7 @@
     "motion": "^12.6.5",
     "next": "14.1.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "openai": "^4.90.0",
     "react": "^18",
     "react-dom": "^18",
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
